--- a/app/src/main/res/layout/activity_cards_revision.xml
+++ b/app/src/main/res/layout/activity_cards_revision.xml
@@ -97,6 +97,7 @@
             android:background="@drawable/revision_text_shown"
             android:textSize="20sp"
             android:padding="10dp"
+            android:layout_marginBottom="5dp"
             android:gravity="center" />
 
         <TextView
