Added folder modes spinners with init and toggle for selection mode

--- a/app/src/main/res/layout/dialog_add_folder_card.xml
+++ b/app/src/main/res/layout/dialog_add_folder_card.xml
@@ -16,6 +16,26 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:text="@string/Folder_0_mode" />
+
+            <Spinner
+                android:id="@+id/dialog_add_folder_card_folder_0_mode_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
         <RadioGroup
             android:id="@+id/dialog_add_folder_card_folder_0_mode_group"
             android:layout_width="match_parent"
@@ -74,6 +94,26 @@
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="4dp">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:text="@string/Folder_0_mode" />
+
+            <Spinner
+                android:id="@+id/dialog_add_folder_card_folder_1_mode_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
         <RadioGroup
             android:id="@+id/dialog_add_folder_card_folder_1_mode_group"
             android:layout_width="match_parent"
@@ -131,6 +171,26 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:text="@string/Folder_0_mode" />
+
+            <Spinner
+                android:id="@+id/dialog_add_folder_card_folder_2_mode_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
 
         <RadioGroup
             android:id="@+id/dialog_add_folder_card_folder_2_mode_group"
