--- a/app/src/main/res/layout/node_cards_manager_folder.xml
+++ b/app/src/main/res/layout/node_cards_manager_folder.xml
@@ -9,13 +9,21 @@
     android:paddingEnd="10dp"
     android:background="@drawable/folder_bottom_border">
 
+    <CheckBox
+        android:id="@+id/node_cards_manager_card_folder_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentStart="true" />
+
     <com.github.johnkil.print.PrintView
         android:id="@+id/node_cards_manager_card_folder_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentStart="true"
+        android:layout_toEndOf="@+id/node_cards_manager_card_folder_check"
         app:iconText="@string/ic_folder"
         app:iconColor="@android:color/black"
         app:iconFont="fonts/material-icon-font.ttf"
