Adjusted card nodes positioning following addition of checkbox on folder nodes

--- a/app/src/main/res/layout/node_cards_manager_card.xml
+++ b/app/src/main/res/layout/node_cards_manager_card.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="32dp"
         android:layout_alignParentStart="true"
         app:iconText="@string/ic_content_copy"
         app:iconColor="@android:color/black"
